force-app/main/default/objects/ReferenceReportDashboard__c/ReferenceReportDashboard__c.object-meta.xml
<CustomObject>
    <label>Reference Reports/Dashboard</label>
    <nameField>
        <label>Information Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Reports/Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>