force-app/main/default/objects/ReferenceReportDashboard__c/fields/Dashboard_ID__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_ID__c</fullName>
    <externalId>true</externalId>
    <label>Dashboard_ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>