force-app/main/default/objects/ReferenceReportDashboard__c/fields/Dashboard_Name__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Name__c</fullName>
    <label>Dashboard Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>