force-app/main/default/objects/ReferenceReportDashboard__c/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <label>Information</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>