force-app/main/default/objects/ReferenceReportDashboard__c/fields/Shared_Range__c.field-meta.xml
<CustomField>
    <fullName>Shared_Range__c</fullName>
    <label>Shared Range</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>