force-app/main/default/objects/ReferenceReportDashboard__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <formula>IF(ISPICKVAL(Type__c, &quot;Report&quot;), HYPERLINK(
  &quot;/&quot; &amp;  Report_ID__c ,
   Report_Name__c ,
  &quot;_self&quot;
),
    IF(ISPICKVAL(Type__c, &quot;Dashboard&quot;), HYPERLINK(
&quot;/&quot; &amp; Dashboard_ID__c ,
Dashboard_Name__c ,
&quot;_self&quot;
),
         &quot;&quot;)
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL</label>
    <type>Text</type>
</CustomField>