force-app/main/default/objects/ReferenceReportDashboard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ReportDashboardLink__c</columns>
    <columns>Type__c</columns>
    <columns>Information__c</columns>
    <columns>Description__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>Shared_Range__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Shared_Range__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>All</label>
</ListView>