force-app/main/default/objects/ReferenceReportDashboard__c/listViews/Information_Opportunity.listView-meta.xml
<ListView>
    <fullName>Information_Opportunity</fullName>
    <columns>NAME</columns>
    <columns>ReportDashboardLink__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Information__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <label>Information - Opportunity</label>
</ListView>