force-app/main/default/objects/ReferenceReportDashboard__c/listViews/Type_Dashboard.listView-meta.xml
<ListView>
    <fullName>Type_Dashboard</fullName>
    <columns>NAME</columns>
    <columns>ReportDashboardLink__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>Shared_Range__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Dashboard</value>
    </filters>
    <filters>
        <field>Shared_Range__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Type Dashboard</label>
</ListView>