force-app/main/default/objects/ReferenceReportDashboard__c/listViews/Type_Report.listView-meta.xml
<ListView>
    <fullName>Type_Report</fullName>
    <columns>NAME</columns>
    <columns>ReportDashboardLink__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>Shared_Range__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Report</value>
    </filters>
    <label>Type Report</label>
</ListView>